--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -2,7 +2,7 @@
   <h3>Links</h3>
   <thead class="thead-light">
     <tr>
-      <th style="word-wrap: break-word;min-width: 160px;max-width: 160px;">URL</th>
+      <th>URL</th>
       <th>Short URL</th>
       <th>Visit Count</th>
       <th>Link Stats</th>
