--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -3,7 +3,7 @@
   <tbody>
     <tr>
       <td> Long URL: </td>
-      <td><%= @link.full_url %> </td>
+      <td style="word-wrap: break-word;min-width: 120px;max-width: 120px;"><%= @link.full_url %> </td>
     </tr>
     <tr>
       <td> Short URL: </td>
